--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ android {
     buildTypes {
         debug {
             shrinkResources true
-            minifyEnabled true
+            minifyEnabled false
+            applicationIdSuffix ".debug"
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         release {
@@ -60,7 +61,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:$comAndroidSupport_supportV7Version"
     compile "com.android.support:support-v4:$comAndroidSupport_supportV4Version"
     compile "com.github.machinarius:preferencefragment:$comGithubMachinarius_preferenceFragmentVersion"
-
+    compile 'org.apache.commons:commons-math3:3.0'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     testCompile "junit:junit:$junitVersion"
     testCompile "org.mockito:mockito-core:$orgMockitoMockitoCoreVersion"
